# pmw3370-zmk-driver

./: .CMakeLists.txt.un~  .Kconfig.pmw3370.un~  .Kconfig.un~  .README.md.un~  CMakeLists.txt  Kconfig  README.md
drivers/sensor/: .CMakeLists.txt.un~  .Kconfig.un~  .pmw3370.c.un~  CMakeLists.txt  Kconfig  pmw3370.c  pmw3370.c.bak  pmw3370.h
dts/bindings/: .pixart,pmw3370.yaml.un~  .vendor-prefixes.yaml.un~  pixart,pmw3370.yaml  vendor-prefixes.yaml
dts/bindings/sensor/: .pixart,pmw3370.yaml.un~  pixart,pmw3370.yaml
include/: .pmw3370.h.un~  pmw3370.h
source/: .pmw3370.c.un~  pmw3370.c
src/: .pmw3370.c.un~  pmw3370.c
zephyr/: .module.yml.un~  module.yml
